--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color:#21232A;
+    color: white;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    padding: 60px;
+}
+
+
+input {
+    width: 100%;
+    font-size: 1.3rem;
+    color: white;
+    border: solid 1px white;
+}
+
+
+.card {
+
+    align-content: center;
+    border: 1px solid white;
+    border-radius: 6px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    overflow: hidden;
+
+}
+
+.card p {
+
+    padding: 5px;
+    text-align: center;
+}
+
+.card img {
+    max-height: 170px;
+}
+
+
+.card-grid{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
